ARM: dts: ux500: Add device tree for Samsung Gavini
This adds a device tree for the Samsung Galaxy Beam GT-I8530
also known as Gavini.

Signed-off-by: Linus Walleij <linus.walleij@linaro.org>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -1300,6 +1300,7 @@ dtb-$(CONFIG_ARCH_U8500) += \
 	ste-href520-tvk.dtb \
 	ste-ux500-samsung-golden.dtb \
 	ste-ux500-samsung-janice.dtb \
+	ste-ux500-samsung-gavini.dtb \
 	ste-ux500-samsung-skomer.dtb
 dtb-$(CONFIG_ARCH_UNIPHIER) += \
 	uniphier-ld4-ref.dtb \
