ARM: dts: ux500: Add devicetree for Codina
This adds a devicetree for Samsung GT-I8160 also known as Codina.

Cc: newbyte@disroot.org
Cc: Stephan Gerhold <stephan@gerhold.net>
Signed-off-by: Linus Walleij <linus.walleij@linaro.org>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -1301,6 +1301,7 @@ dtb-$(CONFIG_ARCH_U8500) += \
 	ste-ux500-samsung-golden.dtb \
 	ste-ux500-samsung-janice.dtb \
 	ste-ux500-samsung-gavini.dtb \
+	ste-ux500-samsung-codina.dtb \
 	ste-ux500-samsung-skomer.dtb
 dtb-$(CONFIG_ARCH_UNIPHIER) += \
 	uniphier-ld4-ref.dtb \
